<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--<string name="banner_ad_unit_id">ca-app-pub-6809957338111953/7113818997</string>-->
    <string name="banner_ad_unit_id">ca-app-pub-6809957338111953/8955211795</string>
    <string name="ad_interstitial">ca-app-pub-6809957338111953/1034992197</string>

    <string name="open_weather_api_key">4d3f0bf8d671ac54c3bcbdbe61e98ce5</string>

    <string name="app_name">Weather Reporter</string>
    <string name="location_activity_title">Select Location</string>

    <string name="exception_activity_title">Sorry</string>


    <string name="search_by_city">Search By City</string>

    <string name="changeCity">Change location</string>
    <string name="refresh">Refresh</string>


    <string name="reset">Reset</string>
    <string name="writeCrd">writeCrd</string>
    <string name="London">Minsk</string>
    <string name="lat">46.99</string>
    <string name="lon">32</string>
    <string name="temperatureDN">temperatureDN</string>
    <string name="description">Description</string>
    <string name="enterYourCityHere">Enter you city here</string>


    <string name="temperature">Temperature</string>
    <string name="temperatureCUnit">A°C</string>
    <string name="percent">%</string>
    <string name="pressureUnit">pressureUnit</string>
    <string name="speedUnit">Wind</string>
    <string name="clouds">Clouds</string>
    <string name="default_temp">50&#x2103;</string>

    <string name="N">North</string>
    <string name="NE">North East</string>
    <string name="E">East</string>
    <string name="SE">South East</string>
    <string name="S">South</string>
    <string name="SW">South West</string>
    <string name="W">West</string>
    <string name="NW">NorthWest</string>

    <!--      All Label  -->
    <string name="now">Now</string>
    <string name="detail">Detail</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="date">Date</string>
    <string name="speed">Speed</string>
    <string name="degree">Degree</string>
    <string name="sun">Sun</string>
    <string name="forecast">Forecast</string>
    <string name="wind">Wind</string>
    <string name="city_what">Your location ?</string>


    <!--      Hint  -->
    <string name="hint_city">Please enter location</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="wait">Please wait!</string>

    <!--      Error  -->
    <string name="error_exception">Oops!! \nThere was a technical error. Please try again later.</string>
    <string name="restart">Restart</string>
    <string name="error_valid_location">Please enter valid place</string>
    <string name="error_location_cant_empty">Location can\'t be empty</string>
    <string name="please_connect_to_internet">Please check your Internet connection or try again later!</string>
    <string name="location_not_found">Please select your location</string>
    <string name="no_data_found">No data found</string>

    <!--      Menu Label  -->
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_rate_us">Rate us</string>
    <string name="action_facebook_page">Facebook Page</string>

    <string name="action_rate_app">Rate App</string>
    <string name="action_share_app">Share APP</string>
    <string name="action_more_app">More App</string>

    <!--      Unit  -->
    <string name="unit_temperature">\u2103</string>
    <string name="unit_wind">mps</string>


    <!--   exit alert dialog strings -->
    <string name="exit_alert_message">Are you sure you want to exit?</string>
    <string name="exit_alert_title">Rate Weather Reporter!!</string>
    <string name="never_show_again">Don\'t show again.</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_us_message">If you enjoy using Weather Reporter, please take a few seconds to rate us. Thanks for your supports!</string>


    <string name="morning">Morning</string>
    <string name="day">Day</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>


</resources>
