<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">

    <item
        android:id="@+id/editCity"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/changeCity"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="always"></item>
    <item
        android:id="@id/rateapp"
        android:orderInCategory="2"
        android:title="@string/action_rate_app"
        />
    <item
        android:id="@id/shareapp"
        android:orderInCategory="3"
        android:title="@string/action_share_app"
        />
    <item
        android:id="@id/moreapp"
        android:orderInCategory="4"
        android:title="@string/action_more_app"
        />
    <item
        android:id="@id/facebookpage"
        android:orderInCategory="5"
        android:title="@string/action_facebook_page"
        />

    <item
        android:id="@id/exit"
        android:orderInCategory="5"
        android:title="@string/action_exit"
        />

</menu>
